@@ -1,3 +1,7 @@
+2009-01-17  higepon  <higepon@users.sourceforge.jp>
+
+        * test/ffi.scm (libmysqlclient): check the return value of mysql-real-connect.
+
 2009-01-17  kokosabu  <kokosabu@gmail.com>
 
         * FileBinaryInputPort.cpp: Added buffer mode.
